--- a/course-02/exercises/udacity-c2-restapi/package.json
+++ b/course-02/exercises/udacity-c2-restapi/package.json
@@ -9,7 +9,7 @@
     "dev": "ts-node-dev --respawn --transpileOnly ./src/server.ts",
     "prod": "tsc && node ./www/server.js",
     "clean": "if exist www rmdir /q /s www",
-    "build": "npm run clean && tsc && xcopy /s /e /i .\\src\\config .\\www\\config && copy  .npmrc www\\.npmrc && copy package.json .\\www\\package.json && cd www && 7z a archive.zip * && cd ..",
+    "build": "npm run clean && tsc && xcopy /s /e /i .\\src\\config .\\www\\config && copy  .npmrc www\\.npmrc && copy package.json .\\www\\package.json && cd www && 7z a archive.zip * && cd .. && eb deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -21,6 +21,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/jsonwebtoken": "^8.3.2",
     "aws-sdk": "^2.492.0",
+    "axios": "^0.19.2",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "codelyzer": "^5.2.2",
